# tensor-onnx-test

./: README.md  one_hot.onnx  pyproject.toml  simple_model.onnx
one_hot_saved_model/: fingerprint.pb  saved_model.pb
one_hot_saved_model/variables/: variables.data-00000-of-00001  variables.index
simple_model/: fingerprint.pb  saved_model.pb
simple_model/variables/: variables.data-00000-of-00001  variables.index
src/: main.py  scratch_one_hot.py
src/tensor_onnx_test/: __init__.py
